August 30th fix